# stellar-voice-agent

./: .bash_history  .editorconfig  .env.template  .env.test  .gitignore  .last_backup_path  .pre-commit-config.yaml  COMPREHENSIVE_TEST_REPORT.md  CONTRIBUTING.md  DATABASE_IMPLEMENTATION_SUMMARY.md  Dockerfile  Dockerfile.livekit-sip  MONITORING_IMPLEMENTATION_REPORT.md  Makefile  README.md  TEST_VALIDATION_REPORT.md  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.simple.yml  docker-compose.yml  file_classification_analysis.md  final_cleanup_recommendations.md  fix_sql_queries.py  healthcheck.py  livekit-sip-config.json  livekit-sip-correct.yaml  livekit-sip.yaml  nast.md  new.md  performance_baseline.json  project_file_catalog.md  pyproject.toml  requirements.txt  run_comprehensive_tests.py  run_e2e_tests.py  sip_integration_test_results.json  sip_integration_verification_report.md  start.sh  test_sip_integration.py  validate_test_implementation.py
.kiro/: file-protection-rules.md
.kiro-server/: .6124c448360adbeb0adbc771a86db283d2d3f4db.token
config/: deployment.yaml  error_handling.yaml  livekit_auth.yaml  livekit_config.py  monitoring.yaml  performance.yaml  production.yaml  prometheus_health.yaml  retry_policies.yaml  security.yaml
docs/: API_REFERENCE.md  DEVELOPER_ONBOARDING.md  FILE_INVENTORY.md  MODULE_DOCUMENTATION.md  PROJECT_DOCUMENTATION.md  TROUBLESHOOTING_GUIDE.md  conversation_logging.md  conversation_state_machine.md  deployment_guide.md  docker_compose_configuration.md  e2e_testing.md  enhanced_deployment_report.md  file_classifier_implementation.md  livekit_architecture_diagrams.md  livekit_auth_usage.md  livekit_documentation_index.md  livekit_egress_usage.md  livekit_ingress_usage.md  livekit_monitoring_maintenance_guide.md  livekit_monitoring_system.md  livekit_security_configuration.md  livekit_sip_configuration.md  livekit_system_setup_guide.md  livekit_troubleshooting_guide.md  monitoring_system.md  operational_runbook.md  production_deployment_guide.md  prometheus_health_system.md  sip_integration_setup.md
examples/: config_validator_example.py  conversation_logging_example.py  conversation_state_machine_example.py  dialogue_manager_example.py  enhanced_deployment_example.py  fallback_prometheus.yml  file_classifier_demo.py  livekit_api_usage_examples.py  livekit_auth_example.py  livekit_egress_example.py  livekit_ingress_example.py  livekit_monitoring_example.py  livekit_security_example.py  metrics_endpoint_verifier_example.py  monitoring_example.py  prometheus_dashboard_example.py  prometheus_health_example.py  prometheus_recovery_example.py
metrics/: metrics.json
monitoring/: prometheus.yml
scripts/: automated_deployment.py  backup.sh  blue_green_deployment.py  check_error_files.py  cleanup_system.sh  comprehensive_file_audit.py  deploy_livekit_migration.sh  deploy_production.sh  deploy_simple.sh  deploy_sip_config.py  deployment_health_check.py  diagnose_livekit_connection.py  diagnose_sip_busy.py  diagnose_sip_issue.py  final_call_test.py  final_validation.py  final_validation_suite.py  fix_busy_signal.py  fix_cartesia_health_check.py  fix_livekit_connection.py  fix_livekit_sip_auth.py  fix_livekit_sip_config.py  fix_production_deployment.sh  fix_sip_busy_issue.py  fix_sip_now.py  health_monitor.py  load_testing.py  manage_monitoring.sh  migration_plan.py  minimal_final_validation.py  monitor_call_activity.py  monitor_calls.py  monitor_system.py  project_file_classifier.py  prometheus_diagnostics.py  rollback_procedures.py  run_comprehensive_validation.py  run_comprehensive_validation_fixed.py  security_validation.py  setup_livekit_sip.py  (+26 more)
security/: firewall_config.py  secrets_manager.py  security-audit-report.md  security-implementation-report.md  ssl_setup.py
src/: __init__.py  config.py  config_loader.py  health.py  livekit_integration.py  logging_config.py  logging_config_production.py  main.py  metrics.py  orchestrator.py  performance_optimizer.py  security.py  security_monitor.py  sip_handler.py  voice_ai_agent.py  webhooks.py
tests/: conftest.py  pytest.ini  test_base_client.py  test_config.py  test_config_validator.py  test_configuration.py  test_e2e_integration.py  test_enhanced_webhooks.py  test_file_classifier.py  test_health.py  test_infrastructure.py  test_livekit_api_client.py  test_livekit_api_endpoints.py  test_livekit_auth.py  test_livekit_client.py  test_livekit_comprehensive.py  test_livekit_egress.py  (+22 more)
(+162 files in other folders)
